[build-system]
requires = [
    "setuptools >= 65",
    "Cython",
    "numpy >= 2.0.0rc1",
    "setuptools_scm[toml] >= 8",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = [
    "error::astropy.utils.exceptions.AstropyDeprecationWarning",
    "error::gammapy.utils.deprecation.GammapyDeprecationWarning",
    "error::matplotlib.MatplotlibDeprecationWarning",
]

[tool.setuptools_scm]
version_file = "gammapy/version.py"
version_file_template = """
# Note that we need to fall back to the hard-coded version if either
# setuptools_scm can't be imported or setuptools_scm can't determine the
# version, so we catch the generic 'Exception'.
try:
    from setuptools_scm import get_version
    version = get_version(root='..', relative_to=__file__)
except Exception:
    version = '{version}'
"""

[tool.ruff]
exclude = ["docs", "dev"]
# Like black
line-length = 88
indent-width = 4

[tool.ruff.lint]
ignore = ["E741"]
extend-ignore = ["E203","E712"]

[tool.ruff.lint.per-file-ignores]
"examples/*" = ["E402"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Including towncrier to create the changelog
[tool.towncrier]
  package = "gammapy"
  directory = "docs/release-notes"
  filename = "CHANGELOG.rst"

issue_format = "`#{issue} <https://github.com/gammapy/gammapy/issues/{issue}>`_"

# Summary?

  [[tool.towncrier.type]]
  directory = "api"
  name = "API changes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "infrastructure"
  name = "Infrastructure"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "doc"
  name = "Documentation improvements"
  showcontent = true

    [[tool.towncrier.type]]
  directory = "new"
  name = "New features"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "bugfix"
  name = "Bug Fixes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "issues"
  name = "Known issues"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "trivial"
  name = "Contributors"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "trivial"
  name = "Pull Requests"
  showcontent = true
